Finished second page

--- a/index.html
+++ b/index.html
@@ -867,10 +867,394 @@
       </ul>
     </div>
   </div>
-  <div class="rowLine"></div>
+  <div class="rowLine" style="margin-bottom: 5px"></div>
+  <div class="row">
+    <div class="col-xs-2">
+      <h2 style="padding: 0px; margin: 0px">COMMENTS</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px">comments</div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
       <h1>EMPLOYMENT/SUPPORT STATUS</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p><u>E1.</u> Education completed</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p><u>E2.</u> Training or technical</p><br>
+          <p style="margin-left: 30px">education completed</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E3.</u> Do you have a profession, trade</p><br>
+          <p style="margin-left: 30px">or skill?</p>
+          <ul class="smallList">
+            <li><p>0 - No</p></li>
+            <li><p>1 - Yes&nbsp;</p><div class="formInputLine" style="width: 85%"></div></li>
+            <li><p style="margin-left: 40%">Please Specify</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E4.</u> Do you have a valid driver's license?</p><br>
+          <p style="margin-left: 30px">0 - No 1 - Yes</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E5.</u> Do you have an automobile available</p><br>
+          <p style="margin-left: 30px">for use? (Answer No if no valid</p><br>
+          <p style="margin-left: 30px">driver's license.)&nbsp;&nbsp;&nbsp;&nbsp;0 - No 1 - Yes</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p>E6. How long was your</p><br>
+          <p style="margin-left: 30px">longest full-time job?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E7.</u> Usual (or last) occupation?</p>
+        </li>
+        <li>
+          <div class="formInputLine" style="width: 95%;margin-left: 20px"></div>
+        </li>
+        <li>
+          <p style="margin-left: 35%">Specify in Detail</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E8.</u> Does someone contribute to your</p><br>
+          <p style="margin-left: 30px">support in any way?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E9.</u> (ONLY IF "ITEM 8" IS YES)</p><br>
+          <p style="margin-left: 30px">Does this constitute the majority</p><br>
+          <p style="margin-left: 30px">of your support?</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E10. Usual employment pattern,</p><br>
+          <p style="margin-left:40px">past 3 years.</p>
+          <ul class="smallList">
+            <li>
+              <p>1 - full time (40 hrs/wk)</p>
+            </li>
+            <li>
+              <p>2 - part time (reg. hrs.)</p>
+            </li>
+            <li>
+              <p>3 - part time (irreg., daywork)</p>
+            </li>
+            <li>
+              <p>4 - student</p>
+            </li>
+            <li>
+              <p>5 - service</p>
+            </li>
+            <li>
+              <p>6 - retired/disability</p>
+            </li>
+            <li>
+              <p>7 - unemployed</p>
+            </li>
+            <li>
+              <p>8 - in controlled environment</p>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E11.</u> How many days were you paid</p><br>
+          <p style="margin-left: 40px">for working in the past 30?</p><br>
+          <p style="margin-left: 40px">(include "under the table" work.)</p>
+        </li>
+        <li>
+          <p>How much money did you receive from the following sources in the past 30 days?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E12.</u> Employment</p><br>
+          <p style="margin-left: 40px">(net income)</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E13.</u> Unemployment</p><br>
+          <p style="margin-left: 40px">compensation</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E14.</u> DPA</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E15.</u> Pension, benefits or</p><br>
+          <p style="margin-left: 40px">social security</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E16.</u> Mate, family or friends</p><br>
+          <p style="margin-left: 40px">(Money for personal</p><br>
+          <p style="margin-left: 40px">expenses)</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>E17.</u> Illegal</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E18. How many people depend on you</p><br>
+          <p style="margin-left: 40px">for the majority of their food,</p><br>
+          <p style="margin-left: 40px">shelter, etc.?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E19. How many days have you</p><br>
+          <p style="margin-left: 40px">experienced employment</p><br>
+          <p style="margin-left: 40px">problems in the past 30 days?</p>
+        </li>
+        <li>
+          <p><em>For questions E20&nbsp;E21 please ask patient to use the <b>Patient Rating Scale</b>.</em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E20. How troubled or bothered have</p><br>
+          <p style="margin-left: 40px">you been by these employment</p><br>
+          <p style="margin-left: 40px">problems in the past 30 days?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E21. How important to you now is</p><br>
+          <p style="margin-left: 40px">counseling for these employment</p><br>
+          <p style="margin-left: 40px">problems?</p>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Interviewer Severity Rating</b></em></p>
+        </li>
+        <li>
+          <p>E22. How would you rate the patient's</p><br>
+          <p style="margin-left: 40px">need for employment conunseling?</p>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Confidence Rating</b></em></p>
+        </li>
+        <li style="text-align: center">
+          <p>Is the above information significantly distorted by:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E23. Patient's misrepresentation?</p><br>
+          <p style="margin-left: 100px">0 - No 1 - Yes</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>E24. How important to you now is</p><br>
+          <p style="margin-left: 100px">0 - No 1 - Yes</p><br>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="rowLine" style="margin-bottom: 5px"></div>
+  <div class="row">
+    <div class="col-xs-2">
+      <h2 style="padding: 0px; margin: 0px">COMMENTS</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
