finished leftDiv of Drug...

--- a/index.html
+++ b/index.html
@@ -1258,6 +1258,459 @@
     </div>
   </div>
   <!-- end row -->
+  <div class="row">
+    <div class="col-xs-2">
+      <table style="margin-top: 10px; margin-left: 10px">
+        <tr>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-xs-10">
+      <h1 style="margin-left: -20%">DRUG/ALCOHOL USE</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell" style="height: 0px;border:none"></td>
+                    <td class="formCell" style="height: 0px;border:none"></td>
+                  </tr>
+                </table>
+                <h5 style="text-align: left">Past 30<br> days</h5>
+              </td>
+              <td>
+                <h5 style="text-align: center">Lifetime<br> years</h4>
+                <table>
+                  <tr>
+                    <td class="formCell" style="height: 0px;border:none"></td>
+                    <td class="formCell" style="height: 0px;border:none"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <h5 style="text-align: right">Use<br>Route<br>Admin</h5>
+                <table>
+                  <tr>
+                    <td class="formCell" style="height: 0px;border:none"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table><br><br><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D1.</u> Alcohol - any</p><br>
+          <p style="margin-left: 30px">use at all</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D2.</u> Alcohol to</p><br>
+          <p style="margin-left: 30px">Intoxication</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D3.</u> Heroin</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D4.</u> Methadone</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D5.</u> Other opiates/</p><br>
+          <p style="margin-left: 30px">analgesics</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D6.</u> Barbiturates</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D7.</u> Other sedatives/</p><br>
+          <p style="margin-left: 30px">hyp/tranquilizers</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D8.</u> Cocaine</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D9.</u> Amphetamines</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D10.</u> Cannabis</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D11.</u> Hallucinogens</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p><u>D12.</u> Inhalants</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>D13.</u> More than one</p><br>
+          <p style="margin-left: 40px">substance per day</p><br>
+          <p style="margin-left: 40px">(including alcohol)</p>
+        </li>
+        <li>
+          <p><u>Note:</u> See manuel for representative examples for each drug class</p>
+        </li>
+        <li>
+          <p><u>Route of Administration</u>: 1 = Oral, 2 = Nasal, 3 = Smoking, 4 = Non IV inj., 5 = IV inj.</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>D14.</u> Which substance is the major</p><br>
+          <p style="margin-left: 40px">problem?<em> Please code as</em></p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="rowLine"></div>
 </div>
 <!-- end container -->
     
