--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,110 @@
             </tr>
           </table>
           <p><u>D14.</u> Which substance is the major</p><br>
-          <p style="margin-left: 40px">problem?<em> Please code as</em></p>
+          <p style="margin-left: 40px">problem?<em> Please code as</em></p><br>
+          <p style="margin-left: 40px"><em>above or</em> or 00 - No problem;</p><br>
+          <p style="margin-left: 40px">15 - Alcohol &amp; Drug (Dual</p><br>
+          <p style="margin-left: 40px">addiction); 16 - Polydrug;</p><br>
+          <p style="margin-left: 40px"><em>when not clear, ask patient.</em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>D15.</u> How long was your last</p><br>
+          <p style="margin-left: 40px">period of voluntary abstinence</p><br>
+          <p style="margin-left: 40px">from this major substance?</p><br>
+          <p style="margin-left: 40px">(00 - never abstinent)</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>D16.</u> How many months ago did</p><br>
+          <p style="margin-left: 40px">abstinence end?</p><br>
+          <p style="margin-left: 40px">(00 - still abstinent)</p>
+        </li>
+        <li>
+          <p>How many times have you:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D17.</u> Had alcohol d.t.'s?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D18.</u> Overdosed on drugs?</p>
+        </li>
+        <li>
+          <p>How many times in your life have you been treated for:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D19.</u> Alcohol Abuse:</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D20.</u> Drug Abuse:</p>
+        </li>
+        <li>
+          <p>How many of these were detox only?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D21.</u> Alcohol:</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D22.</u> Drug:</p>
+        </li>
+        <li>
+          <p>How much would you say you spent during the past 30 days on:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D23.</u> Alcohol?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D24.</u> Drugs?</p>
         </li>
       </ul>
     </div>
