Finished third page

--- a/index.html
+++ b/index.html
@@ -1689,6 +1689,7 @@
         <li>
           <p><u>Route of Administration</u>: 1 = Oral, 2 = Nasal, 3 = Smoking, 4 = Non IV inj., 5 = IV inj.</p>
         </li>
+        <li><h2 style="text-align: left; margin-left: 20px; padding: 0px"><u>COMMNENTS</u></h2></li>
       </ul>
     </div>
     <div class="col-xs-4 centralDiv sameHeight" style="border: none">
@@ -1727,7 +1728,7 @@
             </tr>
           </table>
           <p><u>D16.</u> How many months ago did</p><br>
-          <p style="margin-left: 40px">abstinence end?</p><br>
+          <p style="margin-left: 40px">this abstinence end?</p><br>
           <p style="margin-left: 40px">(00 - still abstinent)</p>
         </li>
         <li>
@@ -1809,11 +1810,221 @@
       </ul>
     </div>
     <div class="col-xs-4 rightDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>D25.</u> How many days have you</p><br>
+          <p style="margin-left: 40px">been treated in an outpatient</p><br>
+          <p style="margin-left: 40px">setting for alcohol or drugs in the past 30</p><br>
+          <p style="margin-left: 40px">days? (Include NA, AA).</p>
+        </li>
+        <li>
+          <p>How many days in the past 30 days have you experienced:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D26.</u> Alcohol Problems?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D27.</u> Drug Problems?</p>
+        </li>
+        <li>
+          <p><em>For questions D28 - D31 please ask the patient to use the <b>Patient's Rating Scale</b>.</em></p>
+        </li>
+        <li>
+          <p>How troubled or bothered have you been in the past 30 days by these:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D28.</u> Alcohol Problems?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D29.</u> Drug Problems?</p>
+        </li>
+        <li>
+          <p>How important to you now is treatment for these:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D30.</u> Alcohol Problems?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D31.</u> Drug Problems?</p>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Interviewer Severity Rating</b></em></p>
+        </li>
+        <li>
+          <p>How would you rate the patient's need for treatment for:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D32.</u> Alcohol Abuse?</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D33.</u> Drug Abuse?</p>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Confidence Rating</b></em></p>
+        </li>
+        <li>
+          <p>Is the above information significantly distorted by:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D34.</u> Alcohol Abuse?</p><br>
+          <ul class="smallList" style="margin-left: 45px">
+            <li><p>0 - No 1 - Yes</p></li>
+          </ul>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>D35.</u> Drug Abuse?</p>
+          <ul class="smallList" style="margin-left: 45px">
+            <li><p>0 - No 1 - Yes</p></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-2">
+      <table style="margin-top: 10px; margin-left: 10px">
+        <tr>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-xs-10">
+      <h1 style="margin-left: -20%">LEGAL STATUS</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight" style="border: none">
       <ul class="questionList"></ul>
     </div>
   </div>
   <!-- end row -->
-  <div class="rowLine"></div>
 </div>
 <!-- end container -->
     
