finished leftDiv of legal...

--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,131 @@
   <!-- end row -->
   <div class="row rowSameHeight">
     <div class="col-xs-4 leftDiv sameHeight" style="border: none">
-      <ul class="questionList"></ul>
+      <ul class="questionList">
+        <li>
+          <p><u>L1.</u> Was this admission prompted or</p><br>
+          <p style="margin-left: 30px">suggested by the criminal justice</p><br>
+          <p style="margin-left: 30px">system (judge, probation/parole officer, etc.)</p><br>
+          <p style="margin-left: 30px">0 - No 1 - Yes</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>          
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L2.</u> Are you on probation or parole?</p>
+          <p style="margin-left: 30px">0 - No 1 - Yes</p>
+        </li>
+        <li>
+          <p>How many times in your life have you been arrested and <u>charged</u> with the following:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L3.</u> - shoplifting/vandalism</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L4.</u> - parole/probation violations</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L5.</u> - drug charges</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L6.</u> - forgery</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L7.</u> - weapons offense</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L8.</u> - burglary, larceny, B&amp;F</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L9.</u> - robbery</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L10.</u> - assault</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L11.</u> - arson</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L12.</u> - rape</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L13.</u> - homicide/manslaughter</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L14.</u> - prostitution</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L15.</u> - contempt of court</p><br>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p style="margin-left: 45px"><u>L16.</u> - other</p><br>
+        </li>
+      </ul>
     </div>
     <div class="col-xs-4 centralDiv sameHeight" style="border: none">
       <ul class="questionList"></ul>
@@ -2025,6 +2149,7 @@
     </div>
   </div>
   <!-- end row -->
+  <div class="rowLine"></div>
 </div>
 <!-- end container -->
     
